# public-sector-a11y

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json
.github/: dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  epic.yml  feature_request.yml  task.yml
.github/workflows/: bigquery-to-csv.yml  csv-bigquery-sync.yml  csv-to-bigquery.yml  dependency.yaml  deploy.yaml  k8-resources.yml  k8.yml  rust-containers.yml
data/agencies-orgs/: federal.json
data/domains/: dod.json  domains.csv
data/scans/: README.md
k8s/: a11y-connect.yml  a11ywatch-backend.yaml  a11ywatch-connect.yaml  a11ywatch-frontend.yaml  civic-rust.yaml
rust-checker/: Cargo.toml  Dockerfile  crawl.rs  package-lock.json  scan-update.rs  scan.rs  up.rs
