[package]
name = "Rusty-Checks"
version = "0.1.0"
authors = ["TheBoatyMcBoatFace"]
edition = "2023"

[dependencies]
rocket = "0.5.0"
reqwest = "0.11.0"
bigquery_rs = "0.4.0"
serde_derive = "1.0.0"
rocket_contrib = { version = "0.5.0", default-features = false, features = ["json"] }

[dependencies.rocket_codegen]
version = "0.5.0"
features = ["serve", "json"]